# spoiler-agent

./: .gitignore  README.md  pyproject.toml  requirements-finetune.txt  requirements.txt
configs/: default.yaml  fine_tune.yaml
scripts/: check_has_spoiler_zero.py  evaluate.py  fine_tune_qlora.py  prepare_data.py  run_inference.py
scripts1/: check_balance.py  client_example.py  debug_compress.py  evaluate.py  fine_tune_qlora.py  fine_tune_qlora_v2.py  prepare_data.py  prepare_monitor_data.py  run_inference.py  sample_test_data.py  sort_data.py
src/: __init__.py  api.py  eval.py  infer.py  llm.py  prompts.py
src/spoiler_agent/: infer.py  llm.py  prompts.py  schema.py
